# minx

./: .gitignore  CMakeLists.txt
examples/: hello_world.minx  var.minx
include/: Ast.hpp  CMakeLists.txt  CodeGen.hpp  FileLocation.hpp  Io.hpp  Lexer.hpp  Parser.hpp  Scope.hpp  ScopeCreator.hpp  Token.hpp  Type.hpp  VariantsAST.hpp  Visitor.hpp
src/: CMakeLists.txt  CodeGen.cpp  Io.cpp  Lexer.cpp  Parser.cpp  Scope.cpp  ScopeCreator.cpp  Token.cpp  Type.cpp  main.cpp
